fixed homepage on mobile,readjusted font size and color, corrected spelling mistakes

--- a/airline_website/about/static/about/css/about.css
+++ b/airline_website/about/static/about/css/about.css
@@ -128,6 +128,7 @@ section {
     width: 100%;
     padding: 0;
     margin-bottom: 20px;
+    background-color: white;
 }
 
 .text h3 {
@@ -292,10 +293,36 @@ section {
         align-items: center;
     }
 
+    .bout .main .text p {
+        font-size: 18px
+    }
+
     .small-carousel,
     .text {
         max-width: 100%;
+        width: 95%;
+        padding: 10px 0;
+
+    }
+
+    .small-carousel .carousel-item img {
+        height: 50vh;
+        border-radius: 5px;
+    }
+
+    .text {
         width: 100%;
+        padding: 0 20px;
+        margin-top: -60px;
+    }
+
+    .text h3 {
+        font-size: 22px;
+    }
+
+    .text h4 {
+        font-size: 18px;
+        font-family: cursive;
     }
 }
 
@@ -316,7 +343,7 @@ section {
     .small-carousel {
         margin-left: 10px;
         height: 40vh;
-        width: 100%;
+        width: 90%;
         margin-top: 20px;
     }
 
@@ -327,6 +354,7 @@ section {
         margin-bottom: 15px;
         height: auto;
         min-height: 90vh;
+
     }
 
     .bout .text h3 {
@@ -339,7 +367,7 @@ section {
     }
 
     .bout .text p {
-        font-size: 20px;
+        font-size: 14px;
     }
 
 }
@@ -373,6 +401,8 @@ section {
         text-align: justify;
         font-size: 12px;
         padding: 8px;
+        background-color: white;
+        margin-bottom: 220px;
         /* height: auto; */
     }
 
@@ -483,11 +513,12 @@ section {
     .mission-content h2,
     .testimonials h2 {
         font-size: 28px;
-        color: green;
+        color: red;
     }
 
     .mission-content p {
-        font-size: 21px;
+        font-size: 19px;
+        text-align: justify;
     }
 
     .testimonial-item {
