--- a/airline_website/home/static/home/css/bee.css
+++ b/airline_website/home/static/home/css/bee.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -75,6 +79,7 @@ body {
 
 .navbar ul li a.active {
     background: rgba(255, 255, 255, 0.3);
+    background-color: red;
 }
 
 .navbar ul li i {
@@ -117,34 +122,85 @@ body {
     cursor: pointer;
 }
 
+@media (min-width: 769px) and (max-width:1024px) {
+    .navbar {
+        width: 200px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .navbar .company {
+        /* background-color:gold; */
+        width: 200px
+    }
+
+    .navbar .logo p {
+        font-size: 12px;
+        color: red;
+    }
+
+    .navbar form {
+        width: 170px;
+    }
+
+    .navbar ul li a {
+        font-size: 15px;
+    }
+
+    .navbar ul li a.active {
+        background: #a92828;
+        background: red;
+        width: 170px;
+        border-radius: 4px;
+    }
+}
+
 @media (max-width: 768px) {
     .navbar {
-        width: 90px;
+        width: 50px;
         height: auto;
+        justify-content: center;
+        align-items: start;
     }
 
     .navbar .logo {
-        flex-direction: column;
-        align-items: center;
+        width: 50px;
+    }
+
+    .navbar .logo img {
+        width: auto;
+        margin: 0 -20px;
     }
 
     .navbar .logo p {
         display: none;
     }
 
+
+    .navlist {
+        /* background-color: brown; */
+        max-width: 50px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
     .navbar ul li a {
-        justify-content: flex-start;
         padding: 10px;
         font-size: 24px;
     }
 
     .navbar ul li a i {
-        font-size: 29px;
+        font-size: 18px;
+        padding-left: -50px;
+
     }
 
     .navbar ul li a.active {
         background-color: rgb(226, 58, 58);
-        width: 50px;
+        width: 35px;
+        border-radius: 3px;
     }
 
     .navbar ul li a .icon_name {
@@ -292,11 +348,40 @@ body {
 .destination-card p {
     font-size: 14px;
     color: #555;
+    color: black;
     line-height: 22px;
-    
+
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-family: "Lora", serif;
+
+    font-weight: 400;
+    font-style: normal;
+
+
+
 }
 
 /* Media query for smaller screens */
+@media (min-width: 769px) and (max-width:1024px) {
+    .navbar {
+        width: 200px;
+        justify-content: center;
+    }
+
+    .navbar .company .logo {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+    }
+
+    .destination-card p {
+        font-size: 14px;
+    }
+}
+
 @media (max-width: 768px) {
     .popular-destinations {
         grid-template-columns: repeat(2, 1fr);
@@ -309,14 +394,20 @@ body {
         display: -webkit-box;
         line-clamp: 4;
         -webkit-box-orient: vertical;
+        font-size: 11px;
     }
 
     .destination-card img {
         height: 120px;
+        border-radius: 4px;
     }
 
     .destination-card h3 {
-        font-size: 16px;
+        font-size: 14px;
+    }
+
+    .destination-card h4 {
+        font-size: 12px;
     }
 
     .hero-section {
@@ -325,11 +416,8 @@ body {
 
     .booking-form {
         width: 90%;
-        /* Make the form take up more of the screen */
         margin: 10px auto;
-        /* Adjust margins for smaller screens */
         padding: 15px;
-        /* Reduce padding for mobile */
     }
 
     .booking-form h2 {
@@ -350,6 +438,7 @@ body {
     .booking-form button {
         font-size: 16px;
         padding: 10px;
+        margin-top: 20px;
     }
 }
 
@@ -374,7 +463,6 @@ body {
     }
 
     .content {
-        background-color: purple;
         padding: 10px;
         overflow: scroll;
     }
@@ -386,13 +474,23 @@ body {
 
     .destination-card img {
         height: 100px;
+        border-radius: 4px;
     }
 
     .destination-card h3 {
-        font-size: 14px;
+        font-size: 12px;
+    }
+
+    .destination-card h4 {
+        font-size: 13px;
     }
 
     .destination-card {
-        padding: 10px;
+        padding: 10.5px;
+    }
+
+    .destination-card p {
+        font-size: 11px;
+        color: black;
     }
 }
